--- a/src/components/product/productview.module.css
+++ b/src/components/product/productview.module.css
@@ -220,6 +220,18 @@
 {
     color: green;
 }
+.navlink1
+{
+    font-size: 16px;
+    margin-left: 15px;
+    padding: 0%;
+    color: white;
+    font-weight: bold;
+    text-decoration: none;
+}
+.navlink1:hover{
+    color: green;
+}
 .navli
 {
     font-size: 18px;
