--- a/src/components/cart/cart.module.css
+++ b/src/components/cart/cart.module.css
@@ -93,6 +93,19 @@
 {
     color: green;
 }
+.navlink1
+{
+    font-size: 16px;
+    margin-left: 15px;
+    padding: 0%;
+    color: white;
+    font-weight: bold;
+    text-decoration: none;
+}
+.navlink1:hover
+{
+    color: green;
+}
 .card{
     width: 100%;
 }
